# aptos-indexer-processors

./: .gitignore  .gitmodules  .node-version  README.md  buf.gen.yaml  buf.python.gen.yaml  buf.rust.gen.yaml  buf.ts.gen.yaml  build_protos.sh  codecov.yml  config.yaml  docker-compose.yml  package.json  pnpm-lock.yaml  rust-toolchain.toml
python/: .dockerignore  Dockerfile  README.md  compile_profobuf.sh  compile_protobuf.sh  config.py  config.yaml  config.yaml.example  create_table.py  docker-compose-config.yaml.example  docker-compose.yml  grpc_client.py  grpc_parser.py  processor.py  pyproject.toml
python/aptos-indexer-protos/: CHANGELOG.md  CONTRIBUTING.md  README.md  generate.sh  pyproject.toml
python/aptos/bigquery_schema/v1/: transaction_pb2.py  transaction_pb2.pyi
python/aptos/datastream/v1/: datastream_pb2.py  datastream_pb2.pyi  datastream_pb2_grpc.py
python/aptos/indexer/v1/: raw_data_pb2.py  raw_data_pb2.pyi  raw_data_pb2_grpc.py
python/aptos/transaction/v1/: transaction_pb2.py  transaction_pb2.pyi
python/aptos/util/timestamp/: timestamp_pb2.py  timestamp_pb2.pyi
python/db_adapters/: bigquery_stream_manager.py
python/models/: nft_marketplace_activities.proto  nft_marketplace_activities.py
python/models/proto_autogen/: nft_marketplace_activities_pb2.py  nft_marketplace_activities_pb2.pyi
python/models/protos/: nft_marketplace_activities.proto
python/parsers/nft_orderbooks/: nft_orderbooks_parser.py  topaz_parser.py
python/processors/: README.md  main.py
python/processors/aptos_ambassador_token/: processor.py
python/processors/coin_flip/: README.md  models.py  processor.py
python/processors/coin_flip/move/: Move.toml
python/processors/example_event_processor/: event_parser.py  models.py  processor.py
python/processors/example_event_processor/models/: create_table.py  create_tables.py  models.py
python/processors/examples/: event_parser.py  processor.py
python/processors/nft_marketplace_v2/: constants.py  marketplace_v2_parser.py  marketplace_v2_utils.py  nft_marketplace_models.py  processor.py
python/processors/nft_marketplace_v2/models/: nft_marketplace_listings_models.py
python/processors/nft_orderbooks/: nft_marketplace_activities_processor.py  nft_marketplace_constants.py  nft_marketplace_enums.py  nft_marketplace_processor.py  nft_orderbooks_parser.py  nft_orderbooks_parser_utils.py  souffle_parser.py  topaz_parser.py
python/processors/nft_orderbooks/models/: nft_marketplace_activities.py  (+3 more)
python/processors/toad_stake/: event_types.py  models.py  processor.py
python/scripts/: compile_bigquery_protobuf.sh  create_tables.py
python/utils/: config.py  event_utils.py  general_utils.py  logging.py  metrics.py  object_utils.py  processor_name.py  session.py  token_utils.py  transaction_utils.py  transactions_processor.py  worker.py  write_set_change_utils.py
python/utils/db_adapters/: bigquery_stream_manager.py
python/utils/models/: annotated_types.py  general_models.py  schema_names.py
rust/: -H  .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose-indexer-mainnet.yaml  docker-compose-indexer-testnet.yaml  docker-compose.yaml  example_local_config.yaml  rust-toolchain.toml  start.sh
rust/.cargo/: config.toml
rust/aptos-indexer-protos/: CHANGELOG.md  Cargo.toml  README.md
rust/aptos-indexer-transaction-stream/: Cargo.toml
rust/aptos-indexer-transaction-stream/src/: config.rs  lib.rs  transaction_stream.rs
rust/aptos-protos/: Cargo.toml
rust/examples/: README.md
rust/examples/basic/: Cargo.toml  README.md
rust/framework/: README.md
rust/framework/aptos-indexer-protos/: Cargo.toml
rust/framework/aptos-processor-framework/: Cargo.toml  README.md
rust/framework/aptos-txn-parsers/: Cargo.toml
rust/indexer-metrics/: Cargo.toml  README.md
rust/indexer-metrics/src/: lib.rs  main.rs  metrics.rs  util.rs
rust/integration-tests/: Cargo.toml  README.md
rust/integration-tests/custom_output_path/: test_results.json
rust/integration-tests/src/: cli_parser.rs  config.rs  lib.rs  main.rs  simple_tests.rs
rust/metrics-helper/: Cargo.toml
rust/metrics-helper/src/: main.rs  metrics.rs  util.rs
rust/moving-average/src/: lib.rs
rust/parquet-bq-scripts/: move_resources-create.sql  move_resources-merge.sql  table_items_create.sql  table_items_merge.sql  transactions-create.sql  transactions-merge.sql  write_set_changes_create.sql  write_set_changes_merge.sql
rust/post-processor/: Cargo.toml  config.yaml
rust/post-processor/src/: lib.rs  main.rs  metrics.rs  processor_status_checker.rs
rust/processor/: .env  Cargo.toml  README.md  diesel.toml  parser.yaml  some_proper_name_goes_here
rust/processor/macros/: Cargo.toml
rust/processor/migration/: Cargo.toml
rust/processor/src/: aptos_tournament_schema.rs  config.rs  data_with_query.rs  db_writer.rs  gap_detector.rs  grpc_stream.rs  latest_version_tracker.rs  lib.rs  main.rs  parquet_gap_detector.rs  parquet_handler.rs  parquet_manager.rs  query_executor.rs  query_models.rs  schema.rs  transaction_filter.rs  worker.rs
rust/scripts/: build.sh  check_banned_deps.sh  rust_lint.sh
rust/sdk/: Cargo.toml  README.md
rust/sdk-processor/: Cargo.toml  README.md  parquet_config.yaml
rust/sdk-processor/src/: lib.rs  main.rs
rust/sdk-server-framework/: Cargo.toml
rust/sdk-server-framework/src/: lib.rs
rust/sdk/src/: lib.rs
rust/server-framework/: Cargo.toml
rust/server-framework/src/: lib.rs
rust/service/aptos-processor-service/: Cargo.toml
rust/service/server-framework/: Cargo.toml
rust/test-utils/: Cargo.toml
rust/test-utils/src/: lib.rs
rust/testing-transactions/: Cargo.toml  build.rs
rust/testing-transactions/src/: lib.rs
rust/transaction-filter/: Cargo.toml  README.md
rust/transaction-filter/fixtures/: compressed_files_lz4_00008bc1d5adcf862d3967c1410001fb_705101000.pb.lz4  compressed_files_lz4_0013c194ec4fdbfb8db7306170aac083_445907000.pb.lz4
rust/transaction-filter/src/: api_filter.rs  boolean_transaction_filter.rs  errors.rs  filter_operator.rs  json_search.rs  lib.rs  traits.rs  transaction_filter.rs
(+1932 files in other folders)
