[workspace]
resolver = "2"

members = [
    "indexer-metrics",
    "moving-average",
    "post-processor",
    "processor",
    "server-framework",
]

[workspace.package]
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
edition = "2021"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false
repository = "https://github.com/aptos-labs/aptos-indexer-processors"
rust-version = "1.75"

[workspace.dependencies]
processor = { path = "processor" }
server-framework = { path = "server-framework" }
aptos-moving-average = { path = "moving-average" }

ahash = { version = "0.8.7", features = ["serde"] }
anyhow = "1.0.62"
async-trait = "0.1.53"
aptos-protos = { git = "https://github.com/aptos-labs/aptos-core.git", tag = "aptos-node-v1.10.0" }
backtrace = "0.3.58"
base64 = "0.13.0"
bb8 = "0.8.1"
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
bigdecimal = { version = "0.4.0", features = ["serde"] }
chrono = { version = "0.4.19", features = ["clock", "serde"] }
clap = { version = "4.3.5", features = ["derive", "unstable-styles"] }
diesel = { version = "2.1", features = [
    "chrono",
    "postgres_backend",
    "numeric",
    "serde_json",
] }
diesel-async = { version = "0.4", features = ["postgres", "bb8", "tokio"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
diesel_async_migrations = { git = "https://github.com/niroco/diesel_async_migrations", rev = "11f331b73c5cfcc894380074f748d8fda710ac12" }
enum_dispatch = "0.3.12"
field_count = "0.1.1"
futures = "0.3.30"
futures-core = "0.3.25"
futures-util = "0.3.21"
gcloud-sdk = { version = "0.20.4", features = [
    "google-cloud-bigquery-storage-v1",
] }
cloud-storage = { version = "0.11.1", features = ["global-client"] }
google-cloud-googleapis = "0.10.0"
google-cloud-pubsub = "0.18.0"
hex = "0.4.3"
kanal = { version = "0.1.0-pre8", features = ["async"] }
once_cell = "1.10.0"
num_cpus = "1.16.0"
pbjson = "0.5.1"
prometheus = { version = "0.13.0", default-features = false }
prost = { version = "0.12.3", features = ["no-recursion-limit"] }
prost-types = "0.12.3"
regex = "1.5.5"
reqwest = { version = "0.11.20", features = [
    "blocking",
    "cookies",
    "json",
    "stream",
] }
serde = { version = "1.0.193", features = ["derive", "rc"] }
serde_json = { version = "1.0.81", features = ["preserve_order"] }
serde_yaml = "0.8.24"
sha2 = "0.9.3"
sha3 = "0.9.1"
strum = { version = "0.24.1", features = ["derive"] }
tempfile = "3.3.0"
toml = "0.7.4"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
tokio = { version = "1.35.1", features = ["full"] }
tonic = { version = "0.10.2", features = [
    "tls",
    "tls-roots",
    "transport",
    "prost",
    "gzip",
    "codegen",
] }
tracing = "0.1.34"
unescape = "0.1.0"
url = { version = "2.4.0", features = ["serde"] }
warp = { version = "0.3.5", features = ["tls"] }

# Postgres SSL support
native-tls = "0.2.11"
postgres-native-tls = "0.5.0"
tokio-postgres = "0.7.10"
