[package]
name = "aptos-indexer-protos"
version = "1.0.9"
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
description = "Aptos indexer stack protobuf definitions"
repository = "https://github.com/aptos-labs/aptos-indexer-processors"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = true
edition = "2021"

[dependencies]
pbjson = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
tonic = { workspace = true }
