[package]
name = "sdk-processor"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { workspace = true }
allocative = { workspace = true }
anyhow = { workspace = true }
aptos-indexer-processor-sdk = { workspace = true }
aptos-indexer-processor-sdk-server-framework = { workspace = true }
aptos-indexer-testing-framework = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
diesel_migrations = { workspace = true }
enum_dispatch = { workspace = true }
field_count = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }

google-cloud-storage = { workspace = true }
jemallocator = { workspace = true }
lazy_static = { workspace = true }
log = "0.4.22"

# Postgres SSL support
native-tls = { workspace = true }
num_cpus = { workspace = true }
# Parquet support
parquet = { workspace = true }
postgres-native-tls = { workspace = true }
processor = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[features]
libpq = ["diesel/postgres"]
# When using the default features we enable the diesel/postgres feature. We configure
# it in a feature so the CLI can opt out, since it cannot tolerate the libpq dep.
# Recall that features should always be additive.
default = ["libpq"]
