[package]
name = "sdk-server-framework"
version = "1.0.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
aptos-indexer-processor-sdk = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
autometrics = { workspace = true }
backtrace = { workspace = true }
clap = { workspace = true }
prometheus-client = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
warp = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
aptos-system-utils = { workspace = true }
