[package]
name = "aptos-processor-sdk"
description = "Everything you need to write a processor for the Aptos indexer stack"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
# Internal dependencies.
aptos-moving-average = { workspace = true }

# External dependencies.
anyhow = { workspace = true }
aptos-protos = { workspace = true }
async-trait = { workspace = true }
duration-str = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

# Dependencies for features.
prometheus = { workspace = true, optional = true }
prost = { workspace = true, optional = true }

[features]
counters = ["prometheus", "prost"]
