[package]
name = "basic"
description = "Basic example"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = "1.0.62"
aptos-processor-framework = { workspace = true }
async-trait = "0.1.53"
clap = { version = "4.3.5", features = ["derive", "unstable-styles"] }
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_yaml = "0.9.25"
tokio = { version = "1.21.0", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.17"
