[package]
name = "aptos-processor-framework"
description = "Everything you need to write a processor for the Aptos indexer stack"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
aptos-indexer-protos = { workspace = true }
aptos-moving-average = { workspace = true }
aptos-txn-parsers = { workspace = true }
async-trait = { workspace = true }
duration-str = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }

# Dependencies for features.
prometheus = { workspace = true, optional = true }
prost = { workspace = true, optional = true }

[features]
counters = ["prometheus", "prost"]
